--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "botbuilder": "^3.13.1",
     "botbuilder-azure": "^3.0.4",
     "botbuilder-cognitiveservices": "^1.1.0",
+    "botbuilder-teams": "^0.1.7",
     "dotenv": "^4.0.0",
     "restify": "^5.2.1",
     "striptags": "^3.1.1",
